`custom-menu-bar`: fix `editor-messages` compatibility

--- a/addons/custom-menu-bar/menu-labels.css
+++ b/addons/custom-menu-bar/menu-labels.css
@@ -6,7 +6,7 @@
   justify-content: center;
 }
 
-[class*="menu-bar_hoverable"] > span {
+[class*="menu-bar_hoverable"]:not(.sa-editormessages-count) > span {
   margin: 0;
   padding: 0;
 }
