--- a/addons/custom-menu-bar/menu-labels.css
+++ b/addons/custom-menu-bar/menu-labels.css
@@ -1,8 +1,8 @@
-[class*="menu-bar_file-group"] > [class*="menu-bar_hoverable"] > img {
+[class*="menu-bar_file-group"] > [class*="menu-bar_hoverable"]:not(.sa-editormessages-count) > img {
   display: none;
 }
 
-[class*="menu-bar_hoverable"] {
+[class*="menu-bar_hoverable"]:not(.sa-editormessages-count) {
   justify-content: center;
 }
 
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 1024px) {
-  [class*="menu-bar_file-group"] > [class*="menu-bar_hoverable"] > img {
+  [class*="menu-bar_file-group"] > [class*="menu-bar_hoverable"]:not(.sa-editormessages-count) > img {
     display: block;
   }
 }
